[gd_scene load_steps=51 format=2]

[ext_resource path="res://fighting/distributed_fighter/fighters/fighter/fighter.tscn" type="PackedScene" id=1]
[ext_resource path="res://test/distributed_state/hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://fighting/distributed_fighter/state/rebound.tscn" type="PackedScene" id=3]
[ext_resource path="res://fighting/distributed_fighter/state/dead.tscn" type="PackedScene" id=4]
[ext_resource path="res://test/distributed_state/offensive_hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://fighting/distributed_fighter/state/transitions/input_step.tscn" type="PackedScene" id=6]
[ext_resource path="res://fighting/distributed_fighter/state/turn_around.tscn" type="PackedScene" id=7]
[ext_resource path="res://fighting/distributed_fighter/state/air_flinch.tscn" type="PackedScene" id=8]
[ext_resource path="res://fighting/distributed_fighter/state/flinch.tscn" type="PackedScene" id=9]
[ext_resource path="res://fighting/distributed_fighter/state/ground_attack.tscn" type="PackedScene" id=10]
[ext_resource path="res://fighting/distributed_fighter/state/jump.tscn" type="PackedScene" id=11]
[ext_resource path="res://fighting/distributed_fighter/state/transitions/transitions.tscn" type="PackedScene" id=12]
[ext_resource path="res://test/distributed_state/hitbox_group.gd" type="Script" id=13]
[ext_resource path="res://fighting/distributed_fighter/state/idle.tscn" type="PackedScene" id=14]
[ext_resource path="res://fighting/distributed_fighter/state/dead_air.tscn" type="PackedScene" id=15]
[ext_resource path="res://fighting/distributed_fighter/FighterSprite.tscn" type="PackedScene" id=16]
[ext_resource path="res://test/distributed_state/on_floor.gd" type="Script" id=17]
[ext_resource path="res://fighting/distributed_fighter/state/air.gd" type="Script" id=18]
[ext_resource path="res://fighting/distributed_fighter/fighters/pepe_clone/keep_x_velocity.gd" type="Script" id=19]
[ext_resource path="res://fighting/distributed_fighter/state/air_attack.tscn" type="PackedScene" id=20]
[ext_resource path="res://fighting/distributed_fighter/fighters/pepe_clone/fade_on_dead.gd" type="Script" id=21]
[ext_resource path="res://asset/shader/double_team.gdshader" type="Shader" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.25, 2 )

[sub_resource type="StreamTexture" id=23]
load_path = "res://.import/pepe_clone.png-254449d519e4771fcb97199db94763f5.stex"

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/hitbox/jab:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/hitbox/n_air:active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 23 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16.0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10.0, 9.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/hitbox/n_air:active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3.0, 2.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15.0, 13.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/hitbox/jab:active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=11]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15.0, 0.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15.0, 11.0 ]
}

[sub_resource type="Animation" id=13]
length = 0.101
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 17.0, 16.0 ]
}

[sub_resource type="Animation" id=14]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4.0 ]
}

[sub_resource type="Animation" id=15]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5.0 ]
}

[sub_resource type="Animation" id=16]
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7.0 ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16.0 ]
}

[sub_resource type="Animation" id=18]
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22.0, 20.0, 19.0, 18.0, 18.0 ]
}

[sub_resource type="Animation" id=19]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 23.0, 12.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "turn_around"
} ]
}

[sub_resource type="Animation" id=20]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15.0, 14.0 ]
}

[sub_resource type="Animation" id=21]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 22.0, 21.0, 21.0 ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8.0 ]
}

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 5, 6.5 )

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[sub_resource type="ShaderMaterial" id=30]
shader = ExtResource( 22 )
shader_param/time = 0.0

[sub_resource type="Animation" id=29]
resource_name = "ghost"
length = 0.5
step = 0.017
tracks/0/type = "method"
tracks/0/path = NodePath("../pivot/hitbox")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_all"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:pause")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 30 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:material:shader_param/time")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="pepe_clone" instance=ExtResource( 1 )]
max_health = 15.0
health = 15.0
run_speed = 0.0
run_lerp = 0.0
air_walk_speed = 0.0
air_walk_lerp = 0.0
air_run_speed = 0.0
air_run_lerp = 0.0
air_idle_lerp = 0.0
idle_lerp = 60.0
wall_lerp = 0.0
jump_speed = 200.0

[node name="idle" parent="state_machine" index="0" instance=ExtResource( 14 )]

[node name="transitions" parent="state_machine/idle" index="1" instance=ExtResource( 12 )]

[node name="jab" parent="state_machine/idle/transitions" index="0" instance=ExtResource( 6 )]
end_state = "jab"
B = 3

[node name="front_jump" parent="state_machine/idle/transitions" index="1" instance=ExtResource( 6 )]
end_state = "front_jump"
A = 3
horizontal_dir = 1

[node name="jump" parent="state_machine/idle/transitions" index="2" instance=ExtResource( 6 )]
end_state = "jump"
A = 3

[node name="turn_around" parent="state_machine/idle/transitions" index="3" instance=ExtResource( 6 )]
end_state = "turn_around"
horizontal_dir = -1

[node name="flinch" parent="state_machine" index="1" instance=ExtResource( 9 )]

[node name="air_flinch" parent="state_machine" index="2" instance=ExtResource( 8 )]

[node name="rebound" parent="state_machine" index="3" instance=ExtResource( 3 )]

[node name="dead" parent="state_machine" index="4" instance=ExtResource( 4 )]

[node name="jab" parent="state_machine" index="5" instance=ExtResource( 10 )]
animation = "jab"

[node name="jump" parent="state_machine" index="6" instance=ExtResource( 11 )]

[node name="turn_around" parent="state_machine" index="7" instance=ExtResource( 7 )]

[node name="air" type="Node" parent="state_machine" index="8"]
script = ExtResource( 18 )
animation = "air"

[node name="on_floor" type="Node" parent="state_machine/air" index="0"]
process_priority = -1
script = ExtResource( 17 )
state_to = "idle"

[node name="keep_x_velocity" type="Node" parent="state_machine/air" index="1"]
script = ExtResource( 19 )

[node name="transitions" parent="state_machine/air" index="2" instance=ExtResource( 12 )]

[node name="jab" parent="state_machine/air/transitions" index="0" instance=ExtResource( 6 )]
end_state = "n_air"
B = 3

[node name="front_jump" parent="state_machine" index="9" instance=ExtResource( 11 )]

[node name="direction" parent="state_machine/front_jump" index="2"]
direction = Vector2( 0.5, -0.866025 )
isolated_direction_x = 0.5
isolated_direction_y = -0.866025
direction_degrees = -60.0

[node name="dead_air" parent="state_machine" index="10" instance=ExtResource( 15 )]

[node name="n_air" parent="state_machine" index="11" instance=ExtResource( 20 )]
animation = "air_kick"

[node name="keep_x_velocity" type="Node" parent="state_machine/n_air" index="2"]
script = ExtResource( 19 )

[node name="main" type="Node2D" parent="pivot/hitbox" index="0"]
script = ExtResource( 13 )
active = true

[node name="hurtbox" parent="pivot/hitbox/main" index="0" instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/hitbox/main/hurtbox" index="0"]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="jab" type="Node2D" parent="pivot/hitbox" index="1"]
script = ExtResource( 13 )

[node name="hitbox" parent="pivot/hitbox/jab" index="0" instance=ExtResource( 5 )]
visible = false
monitoring = false
monitorable = false
active = false
knockback = 300.0
damage = 10.0
direction = Vector2( 0.707107, -0.707107 )
direction_degrees = -45.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/hitbox/jab/hitbox" index="0"]
position = Vector2( 8.75, 0 )
shape = SubResource( 2 )

[node name="n_air" type="Node2D" parent="pivot/hitbox" index="2"]
script = ExtResource( 13 )

[node name="hitbox" parent="pivot/hitbox/n_air" index="0" instance=ExtResource( 5 )]
visible = false
monitoring = false
monitorable = false
active = false
knockback = 300.0
damage = 10.0
direction = Vector2( 0.707107, -0.707107 )
direction_degrees = -45.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/hitbox/n_air/hitbox" index="0"]
position = Vector2( 8.75, 0 )
shape = SubResource( 2 )

[node name="Sprite" parent="pivot" index="1" instance=ExtResource( 16 )]
texture = SubResource( 23 )
hframes = 5
vframes = 5
frame = 23

[node name="state_animation" parent="." index="7"]
anims/RESET = SubResource( 24 )
anims/air = SubResource( 3 )
anims/air_kick = SubResource( 4 )
anims/crouch = SubResource( 5 )
anims/fast_fall = SubResource( 6 )
anims/flounder_up = SubResource( 7 )
anims/hurt = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/jab = SubResource( 10 )
anims/jab2 = SubResource( 11 )
anims/jab3 = SubResource( 12 )
anims/jump = SubResource( 13 )
anims/knocked = SubResource( 14 )
anims/launch = SubResource( 15 )
anims/missile_kick = SubResource( 16 )
anims/rebound = SubResource( 17 )
anims/run = SubResource( 18 )
anims/turn_around = SubResource( 19 )
anims/ukick = SubResource( 20 )
anims/walk = SubResource( 21 )
anims/wall = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="9"]
position = Vector2( 0, 1.5 )
shape = SubResource( 25 )

[node name="fade_on_dead" type="Node" parent="." index="10"]
script = ExtResource( 21 )

[node name="Timer" type="Timer" parent="fade_on_dead" index="0"]
wait_time = 0.4
one_shot = true

[node name="ghosting_animation" type="AnimationPlayer" parent="fade_on_dead" index="1"]
playback_process_mode = 0
anims/RESET = SubResource( 28 )
anims/ghost = SubResource( 29 )

[connection signal="dead" from="." to="fade_on_dead" method="_on_dead"]
[connection signal="timeout" from="fade_on_dead/Timer" to="fade_on_dead" method="_on_timeout"]

[editable path="state_machine/front_jump"]
